Half way through lesson 7: Added data binding recycler view with diffUtil
Signed-off-by: Bailey Tye <bailey@vogcalgaryappdeveloper.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="menu_about">About</string>
 
     <string name="message_undo">Restored user names</string>
+    <string name="button_recycler_example">Recycler Example</string>
 </resources>
