--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
 
     <string name="message_undo">Restored user names</string>
     <string name="button_recycler_example">Recycler Example</string>
+    <string name="button_retrofit_moshi_example">Retrofit + Moshi Example</string>
 </resources>
