--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,9 @@
     <string name="button_send_user">Send User</string>
     <string name="button_change_user">Change User</string>
     <string name="button_undo">Undo</string>
+    <string name="button_recycler_example">Recycler Example</string>
+    <string name="button_retrofit_moshi_example">Retrofit + Moshi Example</string>
+    <string name="button_clear_shared_prefs">Clear Shared Prefs</string>
 
     <string name="hint_enter_first_name">Enter first name</string>
     <string name="hint_enter_last_name">Enter last name</string>
@@ -19,7 +22,8 @@
     <string name="menu_home">Home</string>
     <string name="menu_about">About</string>
 
+    <string name="hours_since_install">Hours since install: %d</string>
+
     <string name="message_undo">Restored user names</string>
-    <string name="button_recycler_example">Recycler Example</string>
-    <string name="button_retrofit_moshi_example">Retrofit + Moshi Example</string>
+    <string name="preference_file_key">test_shared_prefs</string>
 </resources>
