--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,10 @@
 
     <string name="surround_with_quotes">\"%s\"</string>
 
+    <string name="notification_channel_id">notification_channel_id</string>
+    <string name="notification_channel_name">Exam Prep Channel</string>
+    <string name="notification_title">Exam Prep</string>
+
     <string name="button_mirror_text_fragment">Two-way Data Binding Example</string>
     <string name="button_send_user">Send User</string>
     <string name="button_change_user">Change User</string>
@@ -26,7 +30,7 @@
     <string name="menu_home">Home</string>
     <string name="menu_about">About</string>
 
-    <string name="hours_since_install">Hours since install: %d</string>
+    <string name="hours_since_install">Days/re-installs since first install: %d</string>
 
     <string name="message_undo">Restored user names</string>
     <string name="message_valid">Email and password valid</string>
@@ -35,4 +39,6 @@
 
     <string name="label_password">Password</string>
     <string name="label_email">Email</string>
+    <string name="label_notification_info">Note: this will also send a notification with a pending intent which deep links to the receive user fragment</string>
+    <string name="button_snooze">Snooze</string>
 </resources>
