--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,9 @@
     <string name="button_clear_shared_prefs">Clear Shared Prefs</string>
     <string name="button_validation_databinding">Validation + Databinding</string>
     <string name="button_validate">Validate</string>
+    <string name="button_pager">Pager Example</string>
+    <string name="button_snooze">Snooze</string>
+    <string name="button_paint_canvas_example">Paint Canvas Example</string>
 
     <string name="hint_enter_first_name">Enter first name</string>
     <string name="hint_enter_last_name">Enter last name</string>
@@ -29,17 +32,17 @@
     <string name="menu_share">Share first name</string>
     <string name="menu_home">Home</string>
     <string name="menu_about">About</string>
+    <string name="menu_swap_transformer">Swap Transformer</string>
 
     <string name="hours_since_install">Days/re-installs since first install: %d</string>
 
     <string name="message_undo">Restored user names</string>
     <string name="message_valid">Email and password valid</string>
+    <string name="message_transformer">Transformer: %s</string>
 
     <string name="preference_file_key">test_shared_prefs</string>
 
     <string name="label_password">Password</string>
     <string name="label_email">Email</string>
     <string name="label_notification_info">Note: this will also send a notification with a pending intent which deep links to the receive user fragment</string>
-    <string name="button_snooze">Snooze</string>
-    <string name="button_paint_canvas_example">Paint Canvas Example</string>
 </resources>
